fix shutter button styling on Safari for iPhone

--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -28,15 +28,15 @@
 }
 
 .shutterButton {
-  border-radius: 999px;
+  border-radius: 50%;
   left: 50%;
   transform: translateX(-50%);
   bottom: 1rem;
   width: 3rem;
   height: 3rem;
-  background-color: #f4f4f4;
-  border: 3px solid #1a1a1a;
-  outline: 3px solid #f4f4f4;
+  padding: 3px;
+  background-color: #1a1a1a;
+  border: 3px solid #f4f4f4;
 }
 
 .submitButton {
